--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~52.0.25",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.2",
+    "expo-camera": "^16.0.11",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
@@ -48,7 +51,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "replyke-rn": "^4.0.0-beta.16",
+    "replyke-rn": "^4.0.0-beta.21",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "validator": "^13.12.0"
