--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "replyke-rn": "^4.0.0-beta.21",
+    "replyke-rn": "^4.0.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "validator": "^13.12.0"
