--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.25",
+    "expo": "~52.0.26",
     "expo-av": "~15.0.2",
-    "expo-blur": "~14.0.2",
-    "expo-camera": "^16.0.11",
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.13",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
@@ -54,7 +54,8 @@
     "replyke-rn": "^4.0.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "expo-image-manipulator": "~13.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
