--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
@@ -51,11 +52,10 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "replyke-rn": "^4.0.4",
+    "replyke-expo": "^4.0.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
-    "validator": "^13.12.0",
-    "expo-image-manipulator": "~13.0.6"
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
