--- a/package.json
+++ b/package.json
@@ -26,28 +26,28 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.26",
+    "expo": "~52.0.32",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.13",
+    "expo-camera": "~16.0.16",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "^16.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
